force-app/main/default/objects/Account/fields/Campo_Teste_DEDE__c.field-meta.xml
<CustomField>
    <fullName>Campo_Teste_DEDE__c</fullName>
    <label>Campo Teste DEDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>