force-app/main/default/objects/Account/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <label>Test2</label>
    <length>111</length>
    <type>Text</type>
</CustomField>