force-app/main/default/objects/Account/fields/TestRodrigao__c.field-meta.xml
<CustomField>
    <fullName>TestRodrigao__c</fullName>
    <label>TestRodrigao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>